--- a/TPACORE/TPACORE.csproj
+++ b/TPACORE/TPACORE.csproj
@@ -53,11 +53,14 @@
     <Compile Include="CoreFramework\CryptoXML.cs" />
     <Compile Include="CoreFramework\CurrentState.cs" />
     <Compile Include="CoreFramework\DataEncryptionManager.cs" />
+    <Compile Include="CoreFramework\EvaluationManager.cs" />
     <Compile Include="CoreFramework\FileReader.cs" />
     <Compile Include="CoreFramework\FileWriter.cs" />
     <Compile Include="CoreFramework\LogManager.cs" />
     <Compile Include="CoreFramework\MediaReader.cs" />
     <Compile Include="CoreFramework\TPACache.cs" />
+    <Compile Include="Entities\EvaluationParameter.cs" />
+    <Compile Include="Entities\EvaluationResult.cs" />
     <Compile Include="Entities\FillInTheBlanksQuestion.cs" />
     <Compile Include="Entities\FillInTheBlanksWithOptionsQuestion.cs" />
     <Compile Include="Entities\ListenAndFillInBlanksQuestion.cs" />
