--- a/TPAPATHABROAD/TPAPathAbroad.csproj
+++ b/TPAPATHABROAD/TPAPathAbroad.csproj
@@ -1097,9 +1097,7 @@
     <Content Include="Data\Temp\info.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Logs\appLogs.log">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <None Include="Logs\appStart.log" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
