--- a/TPAPANACEA/TPAPanacea.csproj
+++ b/TPAPANACEA/TPAPanacea.csproj
@@ -507,7 +507,7 @@
     <Content Include="Data\Logs\appStart.log">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Logs\appLogs.log">
+    <Content Include="Logs\appStart.log">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\Temp\25f7808a-bc50-4857-8e4e-76b8713ff215\info.md">
