--- a/TPACONTENTFILEGENERATOR/Web.config
+++ b/TPACONTENTFILEGENERATOR/Web.config
@@ -8,4 +8,10 @@
     <compilation debug="true" targetFramework="4.0"/>
     <httpRuntime targetFramework="4.0"/>
   </system.web>
+  <location path="help/samples">
+    <system.webServer>
+      <directoryBrowse enabled="true" />
+    </system.webServer>
+
+  </location>
 </configuration>
