Panacea V2, fixes and recitifications ( Part 3/X, August 11, 2018 )

--- a/TPAPANACEA/TPAPanacea.csproj
+++ b/TPAPANACEA/TPAPanacea.csproj
@@ -2308,6 +2308,18 @@
     <Content Include="Data\ENHAVO\Practice Set 5_Speaking - Retell Lecture - Q28.tpi">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Data\ENHAVO\Practice Set 9_Listening - Highlight Incorrect Words- Q13new.tpm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\ENHAVO\Practice Set 9_Listening - Highlight Incorrect Words- Q14new.tpm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\ENHAVO\Practice Set 9_Listening - Multiple choice, choose multiple answers - Q3new.tpm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\ENHAVO\Practice Set 9_Listening - Multiple choice, choose multiple answers - Q4new.tpm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Data\Temp\9b6fca36-b3c9-44a1-b050-228532d08094\e03c7f34-7a7f-46cb-9f8f-a80cc51f827c\info.md" />
     <Content Include="Data\Temp\9b6fca36-b3c9-44a1-b050-228532d08094\info.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
