--- a/TPAPANACEA/TPAPanacea.csproj
+++ b/TPAPANACEA/TPAPanacea.csproj
@@ -2320,6 +2320,9 @@
     <Content Include="Data\ENHAVO\Practice Set 9_Listening - Multiple choice, choose multiple answers - Q4new.tpm">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Data\ENHAVO\SPK\Practice Set 4_Speaking - Retell Lecture - Q28 Practice Test 4.tpm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Data\Temp\9b6fca36-b3c9-44a1-b050-228532d08094\e03c7f34-7a7f-46cb-9f8f-a80cc51f827c\info.md" />
     <Content Include="Data\Temp\9b6fca36-b3c9-44a1-b050-228532d08094\info.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
