--- a/TPAPANACEA/TPAPanacea.csproj
+++ b/TPAPANACEA/TPAPanacea.csproj
@@ -123,7 +123,7 @@
     <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>PANICO.ico</ApplicationIcon>
+    <ApplicationIcon>PANICOV2.ico</ApplicationIcon>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -496,6 +496,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\B4AFE0DCEE464F9282BB52EE0FC03F02_QS.xml" />
     <EmbeddedResource Include="Resources\B4AFE0DCEE464F9282BB52EE0FC03F02_QW.xml" />
+    <Content Include="PANICOV2.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\beep.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
