--- a/TPAPANACEA/TPAPanacea.csproj
+++ b/TPAPANACEA/TPAPanacea.csproj
@@ -2326,7 +2326,7 @@
     <Content Include="Data\ENHAVO\SPK\Practice Set 4_Speaking - Retell Lecture - Q27_prev2.tpm">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Data\ENHAVO\SPK\Practice Set 4_Speaking - Retell Lecture - Q27.tpm">
+    <Content Include="Data\ENHAVO\SPK\Practice Set 4_Speaking - Retell Lecture - Q27_new.tpm">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Data\Temp\9b6fca36-b3c9-44a1-b050-228532d08094\e03c7f34-7a7f-46cb-9f8f-a80cc51f827c\info.md" />
