panacea evaluation v3 features
1. Drag drop on re order.
2. Listening timer ( overall + question wise )
3. Draft changes ( practice mode + mock mode )

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\TPALM\packages.config" />
   <repository path="..\TPALMWEB\packages.config" />
+  <repository path="..\TPAPANACEA\packages.config" />
 </repositories>
