--- a/TPAPANACEA/packages.config
+++ b/TPAPANACEA/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EPPlus" version="4.5.3.1" targetFramework="net40" />
   <package id="gong-wpf-dragdrop" version="1.1.0" targetFramework="net40" />
+  <package id="iTextSharp.LGPLv2.Core" version="1.5.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="12.0.2-beta1" targetFramework="net40" />
+  <package id="PdfRpt.Core" version="1.2.7" targetFramework="net40" />
+  <package id="Portable.BouncyCastle" version="1.8.5" targetFramework="net40" />
 </packages>
